Fixing some styles - this is a mess of testing things over a decade
still way too much

--- a/sliver/style.css
+++ b/sliver/style.css
@@ -292,7 +292,7 @@ a:hover, a:active { outline: 0; }
 
 #header { font-size: 90%; }
 #blog, #blogone { font-size: 14px; }
-#sidebar_top, #sidebar_left, #sidebar_middle, #sidebar_right, #sidebar_footer, #footer { font-size: 12px; }
+#sidebar_top, #sidebar_left, #sidebar_middle, #sidebar_right, #sidebar_footer, #footer { font-size: .75rem; /* 12px */ }
 
 .droid, .droid button,
 .droid input, .droid select,
@@ -338,140 +338,83 @@ img {
     border: 0 none;
     display: inline;
     vertical-align: bottom;
-    padding-bottom: 2px;
-}
-p {
-    text-align: left;
-}
+    padding-bottom: 2px; }
+
+p { text-align: left; }
+
 pre {
     font-family: Courier,monospace;
     font-size: 90%;
     line-height: 1em;
-    white-space: pre;
-}
+    white-space: pre; }
+
 abbr, acronym, .help {
     border-bottom: 1px dotted #000000;
-    cursor: help;
-}
-legend {
-    padding: 0.5em;
-}
+    cursor: help; }
+
+legend { padding: 0.5em; }
+
 fieldset {
     margin: 0 0.2em;
-    padding: 0 1em 2em;
-}
+    padding: 0 1em 2em; }
+
 /* Headings */
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
-}
+    font-weight: bold; }
+
 h1 {
-    font-size: 2em; /* 32px */
-    margin-bottom: 0.5em;
-}
+    font-size: 1.5rem; /* 24px */
+    margin-bottom: 0.5em; }
+
 h2 {
-    font-size: 1.5em; /* 24px */
-    margin-bottom: 0.6667em;
-}
+    font-size: 1.3125rem; /* 21px */
+    margin-bottom: 0.6667em; }
 
 h1, h2 { line-height: 1.25; }
 
 .serendipity_entry header h2 { margin: 0 0 .3333em; }
 
 h3 {
-    font-size: 1.125em;
-    margin-bottom: 0.8889em;
-}
-h3 {
-    font-size: 1.25em; /* 18px */
-    margin: 0 0 .8em;
-}
+    font-size: 1.125rem; /* 18px */
+    margin: 0 0 .8em; }
+
+h3.serendipity_date {
+    font-size: .8125rem; /* 13px */}
+
 .sidebar_plugin > h3 {
     color: #666;
-    font-weight: normal;
-}
+    font-weight: normal; }
+
+.serendipitySideBarItem h3 {
+    font-size: 1.25em; }
+
 h4, h5, h6,
 .staticpage_results h3,
 .comment_results h3,
-.serendipity_freeTag { font-size: 1em; }
+.serendipity_freeTag { font-size: 1rem; }
 
 h4, h5, h6, p, ol, ul, dl, address, pre, table {
-    margin-bottom: 1em;
-}
-
-/* w3c */
-h1 {
-    display: block;
-    font-size: 2em;
-    margin-before: 0.67em;
-    margin-after: 0.67em;
-    margin-start: 0;
-    margin-end: 0;
-    font-weight: bold;
-}
-h2 {
-    display: block;
-    font-size: 1.5em;
-    margin-before: 0.83em;
-    margin-after: 0.83em;
-    margin-start: 0;
-    margin-end: 0;
-    font-weight: bold;
-}
-h3 {
-    display: block;
-    font-size: 1.17em;
-    margin-before: 1em;
-    margin-after: 1em;
-    margin-start: 0;
-    margin-end: 0;
-    font-weight: bold;
-}
-h4 {
-    display: block;
-    margin-before: 1.33em;
-    margin-after: 1.33em;
-    margin-start: 0;
-    margin-end: 0;
-    font-weight: bold;
-}
-h5 {
-    display: block;
-    font-size: .83em;
-    margin-before: 1.67em;
-    margin-after: 1.67em;
-    margin-start: 0;
-    margin-end: 0;
-    font-weight: bold;
-}
-h6 {
-    display: block;
-    font-size: .67em;
-    margin-before: 2.33em;
-    margin-after: 2.33em;
-    margin-start: 0;
-    margin-end: 0;
-    font-weight: bold;
-}
+    margin-bottom: 1em; }
 
 input, textarea {
-    padding: 3px;
-}
+    padding: 3px; }
+
 p.whiteline {
     margin-bottom: 1em;
-    margin-top: 0;
-}
+    margin-top: 0; }
+
 p.break {
     margin-bottom: 0;
-    margin-top: 0;
-}
+    margin-top: 0; }
+
 .clear {
-    clear: both;
-}
+    clear: both; }
+
 blockquote {
     border-left: 4px solid #EEE;
-    padding-left: 1em;
-}
+    padding-left: 1em; }
+
 em { font-style: italic; }
 
 /* meaning all property * quotes: must be in ISO 10646 code (hex) */
@@ -597,7 +540,7 @@ blockquote:lang(de) p:last-child:after { content: '“'; content: close-quote; }
     margin: 0 0 0 .575em;
 }
 #serendipity_banner h2 {
-    margin-left: 1em;
+    margin-left: .8em;
     font-size: 1.25em;
 }
 #header, #footer {
@@ -889,6 +832,9 @@ js .nav-collapse-0.opened {
     text-align: right;
     width: 98%;
 }
+#header_dategroup_entries h3.serendipity_date {
+    margin-top: 1rem;
+}
 .serendipity_title {
     /*continue*/
     font-size: middle;
@@ -911,10 +857,13 @@ js .nav-collapse-0.opened {
 .serendipity_entry {
     /*continue or overwrite defaults */
     color: #222;
-    font-size: 14px;
+    font-size: .875rem; /* 14px; */
     padding-right: 0;
     width: 96%;
     margin: 0 auto auto;
+}
+#footer_dategroup_entry {
+    font-size: 0.875rem; /* 14px; */
 }
 .serendipity_staticpage {
     width: 97%;
@@ -1067,12 +1016,15 @@ a.day {
 }
 .serendipity_commentDirection {
     margin-top: 1em;
-    font-size: .75em;
+    font-size: .75rem; /* 12px */
 }
 #serendipity_comment {
     font-weight: normal;
     margin: 0 .8em;
     padding: 0;
+}
+#serendipity_comment .input-checkbox {
+    margin: .5rem auto;
 }
 .serendipity_commentsTitle {
     margin: 0;
@@ -1609,6 +1561,26 @@ ul#serendipity_categories_list input {
     list-style: none outside none;
     padding-left: 0;
 }
+.dsgvo_gdpr_footer {
+    display: block;
+    position: fixed;
+    background-color: #181818;
+    padding: .5rem;
+    margin: 0 auto;
+    border-radius: 5px;
+    box-shadow: 1px 2px 3px #666;
+    bottom: 0;
+    left: 50%;
+    margin-left: -39.9999%;
+    margin-bottom: .25rem;
+    z-index: 10000;
+    width: 80%;
+}
+.dsgvo_gdpr_footer > a {
+    margin: 0 auto;
+    display: table;
+    color: #f0f0f0;
+}
 /* general end */
 
 
@@ -2089,7 +2061,7 @@ section#blog {
 }
 #sidebar_top .serendipitySideBarItem:first-of-type:not(.container_serendipity_plugin_freetag) {
     width: auto;
-    min-width: 5rem;
+    min-width: 16%;
 }
 #sidebar_top .serendipitySideBarItem.container_serendipity_plugin_freetag {
     display: inline-block;
@@ -2249,7 +2221,6 @@ section#blog {
     font-size: 86%;
     margin-top: .8em;
 }
-#serendipity_categories_list .serendipity_xml_icon  img { vertical-align: middle; margin-left: .2em; }
 
 
 /* =============================================================================
@@ -2365,10 +2336,17 @@ a.serendipity_image_link:hover {
     background: transparent;
 }
 
-/* plugin_categories.tpl */
+/* plugin_categories.tpl, plugin authors container */
+.serendipitySideBarContent form input[type="checkbox"],
 #serendipity_categories_list input[type="checkbox"] {
     width: auto;
     vertical-align: text-bottom;
+}
+.serendipitySideBarItem a.serendipity_xml_icon img {
+    border: 0 none;
+    display: inline;
+    vertical-align: middle;
+    padding-bottom: unset;
 }
 
 /* =============================================================================
